--- a/Dockerfile.UI
+++ b/Dockerfile.UI
@@ -9,4 +9,4 @@ COPY app/build .
 EXPOSE 3000
 
 ENTRYPOINT ["/sbin/tini", "--"]
-CMD [ "http-server", "/ten/build", "-p", "3000" ]
+CMD [ "http-server", "-p", "3000" ]
